Added method to GithubResolver for setting the github auth token